# itfl

./: .gitignore  CMakeLists.txt  README.md
lib/: sha256.h
src/: itfl.cpp
